[project]
name = "ssw_jnplot"
version = "1.0.0"
description = "A python script to modify SSW, plus IDL pros to enable plotting in Jupyter Notebooks"
license = { file = "LICENSE.md" }
readme = "README.md"
keywords = [
    "heliophysics",
    "idl",
    "jupyter"
]

[project.urls]
Homepage = "https://github.com/heliocloud-data/ssw-jnplot"